--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Benevolent Sherbet - Expériences Bienveillantes</title>
-    <meta name="description" content="Créant des expériences douces et bienveillantes qui illuminent votre quotidien. Découvrez nos services personnalisés et notre approche unique.">
+    <title>Benevolent Sherbet - Blanchisserie Écologique Madagascar</title>
+    <meta name="description" content="Service de blanchisserie écologique à Madagascar. Collecte à domicile, lavage respectueux de l'environnement, livraison rapide. Vêtements, vestes, textiles de maison.">
   </head>
   <body>
     <div id="root"></div>
