--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Benevolent Sherbet - Expériences Bienveillantes</title>
-    <title>Benevolent Sherbet - Blanchisserie Écologique Madagascar</title>
-    <meta name="description" content="Service de blanchisserie écologique à Madagascar. Collecte à domicile, lavage respectueux de l'environnement, livraison rapide. Vêtements, vestes, textiles de maison.">
+    <title>e-manasa</title>
+    <title>Blanchisserie Écologique Madagascar</title>
+    <meta
+      name="description"
+      content="Service de blanchisserie écologique à Madagascar. Collecte à domicile, lavage respectueux de l'environnement, livraison rapide. Vêtements, vestes, textiles de maison."
+    />
   </head>
   <body>
     <div id="root"></div>
